<resources>
    <string name="app_name">Sign Me</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_intro">Usage example</string>


    <string name="mutiny_email">contact@mutiny.codes</string>
    <string name="mutiny_codes">Mutiny Codes</string>

    <string name="check_attendance">Check Attendance</string>
    <string name="add_lecture">Add Lecture</string>
    <string name="add_lecture_id">Add Lecture ID</string>
    <string name="lectures_list">List of Lectures</string>
    <string name="share_one_statistic">Share statistic</string>
    <string name="statistic">Statistic</string>
    <string name="stats_by_student">Show attendance by student</string>
    <string name="stats_by_date">Show attendance by date</string>
    <string name="student_signature">See student signature</string>


    <string name="adding_new_lectures">Adding new lecture</string>
    <string name="add_lessons_number">Number of lessons</string>
    <string name="deleting_marked_lectures">Deleting marked lecture</string>
    <string name="sending_stats">Sending stats of marked lectures</string>
    <string name="delete_warning">Are you sure you want to delete</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="new_student">New student</string>
    <string name="exit">Exit</string>


    <string name="enter_name_or_surname">Enter name of surname</string>
    <string name="add_name">Enter name</string>
    <string name="add_surname">Enter surname</string>
    <string name="add_jmbag">Enter JMBAG</string>

    <string name="please_sign">Please sign</string>
    <string name="more_time">more time/s :)</string>


    <string name="enter_email_text">Enter email for receiving attendance statistic.</string>
    <string name="enter_email">Enter email address</string>
    <string name="save_email">Save new email</string>
    <string name="new_email_saved">New email saved</string>
    <string name="email_not_valid">Email address is not valid</string>

    <string name="password_for_exit">Enter password for exit signing.</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save_password">Save new password</string>
    <string name="save_pass_email">Save password and email</string>
    <string name="saved_pass_email">Password and email saved</string>
    <string name="password_not_valid">Password is not valid</string>


    <string name="current_password">Current password is: </string>
    <string name="title_activity_new_password">New Password</string>


    <string name="mail_subject">Attendance up until: </string>
    <string name="mail_text">Attendance from following lectures: </string>
    <string name="unsuccessful_mail">Sending mail was unsuccessful, please try again.</string>

    <string name="student_id">Student ID</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>


    <string name="enter_airplane_mode">Enter airplane mode</string>
    <string name="security_airplane_info">For better security enable airplane mode.\nWhile in airplane mode no communication will arrive so nobody will read your messages.</string>

    <!-- Intro texts -->
    <string name="welcome_title">Cheerful welcome to Sign Me</string>
    <string name="welcome_description">Our goal is to make your job easier.\nEnter freely and of your own free will!</string>

    <string name="about_title">Keeping records made easy</string>
    <string name="about_description">Your only need to download app, and we will take care of the rest.</string>

    <string name="usage_title_1">Instructions (1)</string>
    <string name="usage_description_1">Create events on which you want to keep records.</string>

    <string name="usage_title_2">Instructions (2)</string>
    <string name="usage_description_2">Click on event you want to check attendance.\nUse Sign Me app as Home when pop up appears.</string>

    <string name="airplane_mode_title">Airplane mode!?</string>
    <string name="airplane_mode_description">Best way to prevent anybody to read your incoming private message is to enable airplane mode.
        \nWe heartily recommend it.</string>

    <string name="home_button_title">Home button and exiting</string>
    <string name="home_button_description">While checking attendance home button is disabled and nobody will be able to exit application.
        \nTo exit re-enable it you need to enter password that you choose.</string>

    <string name="statistic_title">See who attended</string>
    <string name="statistic_description">You can send excel table of lecture to chosen email.
        \nOr you can even search who attended lecture by date or by name.</string>

    <string name="more_title">More info</string>
    <string name="more_description">For more in depth information about how application works and all hidden hints visit out web page.</string>
    <string name="web_page">signMe.mutiny.codes</string>

    <string name="title_permissions">Permissions for saving data</string>
    <string name="description_permissions">For third party email applications to send excel record table Sign Me needs to save table in memory.</string>
    <string name="label_grant_permissions">Please grant the permissions before proceeding.</string>


    <string name="select_lecture">Select lecture</string>
    <string name="select_student">Select student</string>
    <string name="select_date">Select date</string>



    <string name="better_luck">Better luck in next version :)</string>
    <string name="draw_overlay_permission">To prevent people to open notification bar during signing you need to allow this permission.</string>



    <!-- OD TUD SU STRNIGOVI S NETA. ZA BRISATI-->

    <string name="title_menu_github">View on GitHub</string>
    <string name="title_menu_reset_first_start">Reset "First start" flag</string>

    <string name="label_options">Options:</string>
    <string name="label_option_fullscreen">Enable fullscreen</string>
    <string name="label_option_scrollable">Scrollable slides</string>
    <string name="label_option_custom_fragments">Enable custom fragments</string>
    <string name="label_option_permissions">Enable permission request</string>
    <string name="label_option_show_back">Show back button</string>
    <string name="label_option_show_next">Show next button</string>
    <string name="label_option_skip_enabled">Enable skip button</string>
    <string name="label_option_finish_enabled">Enable finish button</string>
    <string name="label_option_get_started_enabled">Enable \"Get Started\" button</string>
    <string name="label_start_intro">Start intro</string>
    <string name="label_or">or</string>
    <string name="label_demos">Demos: </string>
    <string name="label_start_canteen">\"Canteen\" intro</string>
    <string name="label_start_splash">Splash screen</string>

    <string name="title_material_metaphor">Material is the metaphor</string>
    <string name="title_material_bold">Bold, graphic, intentional</string>
    <string name="title_material_motion">Motion provides meaning</string>
    <string name="title_material_shadow">Light and shadow</string>

    <string name="description_material_metaphor">A material metaphor is the unifying theory of a rationalized space and a system of motion. The material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic.</string>
    <string name="description_material_bold">The foundational elements of print-based design – typography, grids, space, scale, color, and use of imagery – guide visual treatments.</string>
    <string name="description_material_motion">Motion respects and reinforces the user as the prime mover. Primary user actions are inflection points that initiate motion, transforming the whole design.</string>
    <string name="description_material_shadow">Within the material environment, virtual lights illuminate the scene. Key lights create directional shadows, while ambient light creates soft shadows from all angles.</string>


    <string name="label_button_cta">Click me!</string>
    <string name="toast_button_cta">Hey, that\'s how custom CTA buttons work in material-intro!</string>

    <string name="title_fragment_login">This is a custom fragment.</string>
    <string name="hint_fake_username">Fake username</string>
    <string name="hint_fake_password">Fake password</string>
    <string name="label_fake_login">Fake login</string>
    <string name="label_fake_login_loading">Loading…</string>
    <string name="label_fake_login_success">Logged in ☺</string>
    <string name="label_fake_login_success_message">Successfully faked login.</string>
    <string name="label_fill_out_form">Please fill out the form before proceeding.</string>

    <string name="title_fragment_custom">Take off!</string>

    <string name="label_activity_finish">Nothing here…\n…just a demo how to create a splash screen intro.</string>

    <string name="title_canteen_intro1" translatable="false">Menus right on your screen</string>
    <string name="title_canteen_intro2" translatable="false">Cash on delivery</string>
    <string name="title_canteen_intro3" translatable="false">Choose what you like</string>
    <string name="description_canteen_intro1" translatable="false">Looking for something to eat? Just browse the feed wherever you are.</string>
    <string name="description_canteen_intro2" translatable="false">Order and we\'ll deliver the menu right in front of your door.</string>
    <string name="description_canteen_intro3" translatable="false">Bookmark a menu you wanted to save and keep track of its status whether it\'s available or not.</string>
    <!--<string name="label_button_cta_canteen_intro" translatable="false">Get started</string>-->

</resources>
