<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_check_attendance"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/check_attendance" />
        <item
            android:id="@+id/nav_lectures_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lectures_list" />
        <item
            android:id="@+id/nav_add_lecture"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/add_lecture" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/statistic">
        <menu>
            <item
                android:id="@+id/nav_stats_by_student"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/stats_by_student" />
            <item
                android:id="@+id/nav_stats_by_date"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/stats_by_date" />
            <item
                android:id="@+id/nav_student_signature"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/student_signature" />
        </menu>
    </item>

    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/nav_intro"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_intro" />
        </menu>
    </item>

</menu>
