<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:id="@+id/password_for_exit"
            android:text="@string/password_for_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <EditText
            android:id="@+id/password1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_below="@+id/password_for_exit"/>


    <TextView
            android:id="@+id/eye"
            android:layout_alignBaseline="@id/password1"
            android:layout_toRightOf="@id/password1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/eye"/>

    <EditText
            android:id="@+id/password2"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_below="@+id/password1" />


    <TextView
            android:id="@+id/enter_email_text"
            android:layout_below="@+id/password2"
            android:text="@string/enter_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <EditText
            android:id="@+id/email"
            android:layout_below="@+id/enter_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:hint="@string/enter_email"/>

    <Button
            android:id="@+id/save_pass_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_pass_email"
            android:layout_below="@+id/email" />


</RelativeLayout>