<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
            android:id="@+id/enter_email_text"
            android:text="@string/enter_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <EditText
            android:id="@+id/email"
            android:layout_below="@+id/enter_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"/>

    <Button
            android:id="@+id/save_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_email"
            android:layout_below="@+id/email" />



</RelativeLayout>